// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Task Checklist component renders as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Component
    style={
      Object {
        "padding": 25,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "finished": false,
            "task": Object {
              "channel_id": 1,
              "id": 1,
              "pattern": 1,
              "period": 1,
              "point": 1,
              "title": "Review course material",
            },
          },
          Object {
            "finished": true,
            "task": Object {
              "channel_id": 1,
              "id": 1,
              "pattern": 1,
              "period": 1,
              "point": 1,
              "title": "Review course material",
            },
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </Component>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <FlatList
        data={
          Array [
            Object {
              "finished": false,
              "task": Object {
                "channel_id": 1,
                "id": 1,
                "pattern": 1,
                "period": 1,
                "point": 1,
                "title": "Review course material",
              },
            },
            Object {
              "finished": true,
              "task": Object {
                "channel_id": 1,
                "id": 1,
                "pattern": 1,
                "period": 1,
                "point": 1,
                "title": "Review course material",
              },
            },
          ]
        }
        disableVirtualization={false}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        renderItem={[Function]}
        scrollEventThrottle={50}
        updateCellsBatchingPeriod={50}
        windowSize={21}
      />,
      "style": Object {
        "padding": 25,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "data": Array [
          Object {
            "finished": false,
            "task": Object {
              "channel_id": 1,
              "id": 1,
              "pattern": 1,
              "period": 1,
              "point": 1,
              "title": "Review course material",
            },
          },
          Object {
            "finished": true,
            "task": Object {
              "channel_id": 1,
              "id": 1,
              "pattern": 1,
              "period": 1,
              "point": 1,
              "title": "Review course material",
            },
          },
        ],
        "disableVirtualization": false,
        "horizontal": false,
        "initialNumToRender": 10,
        "keyExtractor": [Function],
        "maxToRenderPerBatch": 10,
        "numColumns": 1,
        "onEndReachedThreshold": 2,
        "renderItem": [Function],
        "scrollEventThrottle": 50,
        "updateCellsBatchingPeriod": 50,
        "windowSize": 21,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <FlatList
          data={
            Array [
              Object {
                "finished": false,
                "task": Object {
                  "channel_id": 1,
                  "id": 1,
                  "pattern": 1,
                  "period": 1,
                  "point": 1,
                  "title": "Review course material",
                },
              },
              Object {
                "finished": true,
                "task": Object {
                  "channel_id": 1,
                  "id": 1,
                  "pattern": 1,
                  "period": 1,
                  "point": 1,
                  "title": "Review course material",
                },
              },
            ]
          }
          disableVirtualization={false}
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          numColumns={1}
          onEndReachedThreshold={2}
          renderItem={[Function]}
          scrollEventThrottle={50}
          updateCellsBatchingPeriod={50}
          windowSize={21}
        />,
        "style": Object {
          "padding": 25,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "data": Array [
            Object {
              "finished": false,
              "task": Object {
                "channel_id": 1,
                "id": 1,
                "pattern": 1,
                "period": 1,
                "point": 1,
                "title": "Review course material",
              },
            },
            Object {
              "finished": true,
              "task": Object {
                "channel_id": 1,
                "id": 1,
                "pattern": 1,
                "period": 1,
                "point": 1,
                "title": "Review course material",
              },
            },
          ],
          "disableVirtualization": false,
          "horizontal": false,
          "initialNumToRender": 10,
          "keyExtractor": [Function],
          "maxToRenderPerBatch": 10,
          "numColumns": 1,
          "onEndReachedThreshold": 2,
          "renderItem": [Function],
          "scrollEventThrottle": 50,
          "updateCellsBatchingPeriod": 50,
          "windowSize": 21,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;

exports[`Testing Task Entry component renders as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TouchableOpacity
    activeOpacity={0.2}
    onPress={[MockFunction]}
    style={
      Object {
        "flexDirection": "row",
        "marginVertical": 15,
      }
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 0.1,
          "justifyContent": "center",
        }
      }
    >
      <Component
        style={
          Object {
            "borderColor": "white",
            "borderRadius": 10,
            "borderWidth": 2,
            "height": 20,
            "width": 20,
          }
        }
      />
    </Component>
    <Component
      style={
        Object {
          "flex": 0.7,
          "flexDirection": "row",
          "paddingLeft": 20,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "fontSize": 20,
          }
        }
      >
        Review course material
      </Text>
    </Component>
    <Component
      style={
        Object {
          "flex": 0.2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "paddingRight": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "fontSize": 20,
          }
        }
      >
        1
      </Text>
    </Component>
  </TouchableOpacity>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "accessibilityComponentType": undefined,
      "accessibilityLabel": undefined,
      "accessibilityTraits": undefined,
      "accessible": true,
      "children": Array [
        Array [
          <Component
            style={
              Object {
                "alignItems": "center",
                "flex": 0.1,
                "justifyContent": "center",
              }
            }
          >
            <Component
              style={
                Object {
                  "borderColor": "white",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "width": 20,
                }
              }
            />
          </Component>,
          <Component
            style={
              Object {
                "flex": 0.7,
                "flexDirection": "row",
                "paddingLeft": 20,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontSize": 20,
                }
              }
            >
              Review course material
            </Text>
          </Component>,
          <Component
            style={
              Object {
                "flex": 0.2,
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "paddingRight": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontSize": 20,
                }
              }
            >
              1
            </Text>
          </Component>,
        ],
        null,
      ],
      "hasTVPreferredFocus": undefined,
      "hitSlop": undefined,
      "isTVSelectable": true,
      "nativeID": undefined,
      "onLayout": undefined,
      "onResponderGrant": [Function],
      "onResponderMove": [Function],
      "onResponderRelease": [Function],
      "onResponderTerminate": [Function],
      "onResponderTerminationRequest": [Function],
      "onStartShouldSetResponder": [Function],
      "style": Array [
        Object {
          "flexDirection": "row",
          "marginVertical": 15,
        },
        Object {
          "opacity": 1,
        },
      ],
      "testID": undefined,
      "tvParallaxProperties": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            style={
              Object {
                "borderColor": "white",
                "borderRadius": 10,
                "borderWidth": 2,
                "height": 20,
                "width": 20,
              }
            }
          />,
          "style": Object {
            "alignItems": "center",
            "flex": 0.1,
            "justifyContent": "center",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "borderColor": "white",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 20,
              "width": 20,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontSize": 20,
              }
            }
          >
            Review course material
          </Text>,
          "style": Object {
            "flex": 0.7,
            "flexDirection": "row",
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Review course material",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
              "fontSize": 20,
            },
          },
          "ref": null,
          "rendered": "Review course material",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontSize": 20,
              }
            }
          >
            1
          </Text>,
          "style": Object {
            "flex": 0.2,
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "paddingRight": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": 1,
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
              "fontSize": 20,
            },
          },
          "ref": null,
          "rendered": 1,
          "type": [Function],
        },
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accessibilityComponentType": undefined,
        "accessibilityLabel": undefined,
        "accessibilityTraits": undefined,
        "accessible": true,
        "children": Array [
          Array [
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flex": 0.1,
                  "justifyContent": "center",
                }
              }
            >
              <Component
                style={
                  Object {
                    "borderColor": "white",
                    "borderRadius": 10,
                    "borderWidth": 2,
                    "height": 20,
                    "width": 20,
                  }
                }
              />
            </Component>,
            <Component
              style={
                Object {
                  "flex": 0.7,
                  "flexDirection": "row",
                  "paddingLeft": 20,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontSize": 20,
                  }
                }
              >
                Review course material
              </Text>
            </Component>,
            <Component
              style={
                Object {
                  "flex": 0.2,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "paddingRight": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontSize": 20,
                  }
                }
              >
                1
              </Text>
            </Component>,
          ],
          null,
        ],
        "hasTVPreferredFocus": undefined,
        "hitSlop": undefined,
        "isTVSelectable": true,
        "nativeID": undefined,
        "onLayout": undefined,
        "onResponderGrant": [Function],
        "onResponderMove": [Function],
        "onResponderRelease": [Function],
        "onResponderTerminate": [Function],
        "onResponderTerminationRequest": [Function],
        "onStartShouldSetResponder": [Function],
        "style": Array [
          Object {
            "flexDirection": "row",
            "marginVertical": 15,
          },
          Object {
            "opacity": 1,
          },
        ],
        "testID": undefined,
        "tvParallaxProperties": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              style={
                Object {
                  "borderColor": "white",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "width": 20,
                }
              }
            />,
            "style": Object {
              "alignItems": "center",
              "flex": 0.1,
              "justifyContent": "center",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Object {
                "borderColor": "white",
                "borderRadius": 10,
                "borderWidth": 2,
                "height": 20,
                "width": 20,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontSize": 20,
                }
              }
            >
              Review course material
            </Text>,
            "style": Object {
              "flex": 0.7,
              "flexDirection": "row",
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Review course material",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
                "fontSize": 20,
              },
            },
            "ref": null,
            "rendered": "Review course material",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontSize": 20,
                }
              }
            >
              1
            </Text>,
            "style": Object {
              "flex": 0.2,
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "paddingRight": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": 1,
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
                "fontSize": 20,
              },
            },
            "ref": null,
            "rendered": 1,
            "type": [Function],
          },
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;

exports[`Testing Task Entry component renders as expected when finished is false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "flexDirection": "row",
        "marginVertical": 15,
      }
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "flex": 0.1,
          "justifyContent": "center",
        }
      }
    >
      <Component
        style={
          Object {
            "backgroundColor": "white",
            "borderColor": "white",
            "borderRadius": 10,
            "borderWidth": 2,
            "height": 20,
            "width": 20,
          }
        }
      />
    </Component>
    <Component
      style={
        Object {
          "flex": 0.7,
          "flexDirection": "row",
          "paddingLeft": 20,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "textDecorationLine": "line-through",
          }
        }
      >
        Review course material
      </Text>
    </Component>
    <Component
      style={
        Object {
          "flex": 0.2,
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "paddingRight": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "white",
            "fontSize": 20,
          }
        }
      >
        1
      </Text>
    </Component>
  </TouchableOpacity>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "accessibilityComponentType": undefined,
      "accessibilityLabel": undefined,
      "accessibilityTraits": undefined,
      "accessible": true,
      "children": Array [
        Array [
          <Component
            style={
              Object {
                "alignItems": "center",
                "flex": 0.1,
                "justifyContent": "center",
              }
            }
          >
            <Component
              style={
                Object {
                  "backgroundColor": "white",
                  "borderColor": "white",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "width": 20,
                }
              }
            />
          </Component>,
          <Component
            style={
              Object {
                "flex": 0.7,
                "flexDirection": "row",
                "paddingLeft": 20,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontSize": 20,
                  "textDecorationLine": "line-through",
                }
              }
            >
              Review course material
            </Text>
          </Component>,
          <Component
            style={
              Object {
                "flex": 0.2,
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "paddingRight": 10,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontSize": 20,
                }
              }
            >
              1
            </Text>
          </Component>,
        ],
        null,
      ],
      "hasTVPreferredFocus": undefined,
      "hitSlop": undefined,
      "isTVSelectable": true,
      "nativeID": undefined,
      "onLayout": undefined,
      "onResponderGrant": [Function],
      "onResponderMove": [Function],
      "onResponderRelease": [Function],
      "onResponderTerminate": [Function],
      "onResponderTerminationRequest": [Function],
      "onStartShouldSetResponder": [Function],
      "style": Array [
        Object {
          "flexDirection": "row",
          "marginVertical": 15,
        },
        Object {
          "opacity": 1,
        },
      ],
      "testID": undefined,
      "tvParallaxProperties": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            style={
              Object {
                "backgroundColor": "white",
                "borderColor": "white",
                "borderRadius": 10,
                "borderWidth": 2,
                "height": 20,
                "width": 20,
              }
            }
          />,
          "style": Object {
            "alignItems": "center",
            "flex": 0.1,
            "justifyContent": "center",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "white",
              "borderColor": "white",
              "borderRadius": 10,
              "borderWidth": 2,
              "height": 20,
              "width": 20,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontSize": 20,
                "textDecorationLine": "line-through",
              }
            }
          >
            Review course material
          </Text>,
          "style": Object {
            "flex": 0.7,
            "flexDirection": "row",
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Review course material",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
              "fontSize": 20,
              "textDecorationLine": "line-through",
            },
          },
          "ref": null,
          "rendered": "Review course material",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontSize": 20,
              }
            }
          >
            1
          </Text>,
          "style": Object {
            "flex": 0.2,
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "paddingRight": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": 1,
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
              "fontSize": 20,
            },
          },
          "ref": null,
          "rendered": 1,
          "type": [Function],
        },
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accessibilityComponentType": undefined,
        "accessibilityLabel": undefined,
        "accessibilityTraits": undefined,
        "accessible": true,
        "children": Array [
          Array [
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flex": 0.1,
                  "justifyContent": "center",
                }
              }
            >
              <Component
                style={
                  Object {
                    "backgroundColor": "white",
                    "borderColor": "white",
                    "borderRadius": 10,
                    "borderWidth": 2,
                    "height": 20,
                    "width": 20,
                  }
                }
              />
            </Component>,
            <Component
              style={
                Object {
                  "flex": 0.7,
                  "flexDirection": "row",
                  "paddingLeft": 20,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontSize": 20,
                    "textDecorationLine": "line-through",
                  }
                }
              >
                Review course material
              </Text>
            </Component>,
            <Component
              style={
                Object {
                  "flex": 0.2,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "paddingRight": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "white",
                    "fontSize": 20,
                  }
                }
              >
                1
              </Text>
            </Component>,
          ],
          null,
        ],
        "hasTVPreferredFocus": undefined,
        "hitSlop": undefined,
        "isTVSelectable": true,
        "nativeID": undefined,
        "onLayout": undefined,
        "onResponderGrant": [Function],
        "onResponderMove": [Function],
        "onResponderRelease": [Function],
        "onResponderTerminate": [Function],
        "onResponderTerminationRequest": [Function],
        "onStartShouldSetResponder": [Function],
        "style": Array [
          Object {
            "flexDirection": "row",
            "marginVertical": 15,
          },
          Object {
            "opacity": 1,
          },
        ],
        "testID": undefined,
        "tvParallaxProperties": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              style={
                Object {
                  "backgroundColor": "white",
                  "borderColor": "white",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "width": 20,
                }
              }
            />,
            "style": Object {
              "alignItems": "center",
              "flex": 0.1,
              "justifyContent": "center",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Object {
                "backgroundColor": "white",
                "borderColor": "white",
                "borderRadius": 10,
                "borderWidth": 2,
                "height": 20,
                "width": 20,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontSize": 20,
                  "textDecorationLine": "line-through",
                }
              }
            >
              Review course material
            </Text>,
            "style": Object {
              "flex": 0.7,
              "flexDirection": "row",
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Review course material",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
                "fontSize": 20,
                "textDecorationLine": "line-through",
              },
            },
            "ref": null,
            "rendered": "Review course material",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontSize": 20,
                }
              }
            >
              1
            </Text>,
            "style": Object {
              "flex": 0.2,
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "paddingRight": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": 1,
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "white",
                "fontSize": 20,
              },
            },
            "ref": null,
            "rendered": 1,
            "type": [Function],
          },
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;
